fix: claude completion tests