@@ -15,7 +15,6 @@ import ee.carlrobert.llm.client.http.ResponseEntity;
 import ee.carlrobert.llm.client.http.exchange.BasicHttpExchange;
 import ee.carlrobert.llm.client.http.exchange.StreamHttpExchange;
 import ee.carlrobert.llm.completion.CompletionEventListener;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import okhttp3.OkHttpClient;
@@ -48,9 +47,7 @@ public class ClaudeClientTest extends BaseTest {
               "claude-3",
               true,
               500,
-              List.of(Map.of("role", "user",
-                  "content", Collections.singletonList(
-                      Map.of("type", "text", "text", "USER_PROMPT")))));
+              List.of(Map.of("role", "user", "content", "USER_PROMPT")));
       return List.of(
           jsonMapResponse("delta", jsonMap("text", "He")),
           jsonMapResponse("delta", jsonMap("text", "llo")),
@@ -106,9 +103,7 @@ public class ClaudeClientTest extends BaseTest {
               0.1,
               1,
               2,
-              List.of(Map.of("role", "user",
-                  "content", Collections.singletonList(
-                      Map.of("type", "text", "text", "USER_PROMPT")))));
+              List.of(Map.of("role", "user", "content", "USER_PROMPT")));
       return new ResponseEntity(
           jsonMapResponse(
               e("content", jsonArray(jsonMap("text", "TEST_ASSISTANT_RESPONSE"))),
